; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/math-emu/extr_cp1emu.c_fpemu_dp_recip.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/math-emu/extr_cp1emu.c_fpemu_dp_recip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.ieee754dp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @fpemu_dp_recip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fpemu_dp_recip(i32 %0) #0 {
  %2 = alloca %union.ieee754dp, align 4
  %3 = alloca %union.ieee754dp, align 4
  %4 = getelementptr inbounds %union.ieee754dp, %union.ieee754dp* %3, i32 0, i32 0
  store i32 %0, i32* %4, align 4
  %5 = call i32 @ieee754dp_one(i32 0)
  %6 = getelementptr inbounds %union.ieee754dp, %union.ieee754dp* %3, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @ieee754dp_div(i32 %5, i32 %7)
  %9 = getelementptr inbounds %union.ieee754dp, %union.ieee754dp* %2, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = getelementptr inbounds %union.ieee754dp, %union.ieee754dp* %2, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}

declare dso_local i32 @ieee754dp_div(i32, i32) #1

declare dso_local i32 @ieee754dp_one(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
